k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rime-config
  namespace: rime-config
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - rime.mayphus.org
      secretName: rime-mayphus-org-tls
    - hosts:
        - rime-config.mayphus.org
      secretName: rime-config-mayphus-org-tls
  rules:
    - host: rime.mayphus.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rime-config
                port:
                  number: 80
    - host: rime-config.mayphus.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rime-config
                port:
                  number: 80
